<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_CCC_ERROR" Id="{8caac466-7445-4468-8ffe-94f727cf501e}">
    <Declaration><![CDATA[TYPE E_CCC_ERROR :
(
	OK				:= 16#0000,
	NOT_IN_OP_STATE	:= 16#0001,
	NOT_INIT		:= 16#0002,
	TIMEOUT			:= 16#0004,
	COMM			:= 16#0008,
	WRONG_STATE		:= 16#0010,
	NOT_IDLE		:= 16#0020
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>