<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_JUMO_ADDRESS" Id="{534fa332-7485-47ed-9c1f-ef0ea203acd6}">
    <Declaration><![CDATA[TYPE E_JUMO_ADDRESS :
(
	COMMON		:=	0,
	SET_POINTS,
	END
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>