<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="T_JUMO_CFG" Id="{77f440e0-3078-40e0-aeb9-7cd8692b6ba5}">
    <Declaration><![CDATA[TYPE T_JUMO_CFG EXTENDS T_RS_BASE_CFG:
STRUCT
	// Register Addresses
	nAddrCommon:		INT	:= 16#00A4;
	nAddrSetPoints:		INT	:= 16#083C;

	// Number of bytes to read
	// These are ONLY data bytes. Total bytes to read is higher (+5) 
	nWordsCommon:		INT	:= 116;	// 232 bytes
	nWordsSetPoints:	INT	:= 32;	// 32 words
	
	aSlaveID:			ARRAY [1..8] OF BYTE := [1,2,3,4,5,6,7,8];
	aDevUsed:			ARRAY [1..8] OF BOOL := [TRUE, 7(FALSE)];	// Only first JUMO used by default
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>