<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="T_JUMO_INFO" Id="{0056a967-52ba-45c4-952b-0ccbb86ddfd9}">
    <Declaration><![CDATA[TYPE T_JUMO_INFO :
STRUCT
(*
	Driver Information

	Change LOG:
	1.0	12/02/2014	- Copied from VLT.
*)
	sDate:			STRING(16)	:= '2016-08-10';
	sDescription:	STRING(32) 	:= 'JUMO controller';
	sName:			STRING(16)	:= 'FB_JUMO';
	sPlatform:		STRING(16)	:= 'CoDeSys';
	sSynopsis:		STRING(48)	:= 'EtherCAT PLC JUMO controller';
	nVersionMajor:	DINT		:= 1;
	nVersionMinor:	DINT		:= 0;

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>